--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ blockquote p {
   display: block;
   height: 200px;
   margin: 2em 20px 40px 20px;
-  background-image: url("img/hexagonDSFAIR.png");
+  background-image: url("img/logo/hexagonDSFAIR.png");
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
